# bincomdev

./: .env.example  .gitignore  DEPLOYMENT.md  ML_Submission_Template.ipynb  PLANS.md  README.md  TESTING.md  manage.py  pyproject.toml  pyrightconfig.json  render.yaml  requirements-analytics.txt  requirements.txt
analysis_outputs/: cluster_assignments.csv  cluster_profiles.csv  data_quality_report.json  lga_modeling_dataset.csv  lga_summary.csv  party_share.csv  polling_unit_completeness.csv
config/: asgi.py  settings.py  urls.py
elections/: admin.py  forms.py  models.py  services.py  source_quirks.py  tests.py  urls.py  views.py
elections/management/commands/: audit_bincom_data.py  import_bincom_sql.py  seed_demo_data.py
elections/migrations/: 0001_initial.py  0002_sequencecounter.py
elections/templates/elections/: base.html  dashboard.html  lga_results.html  polling_unit_detail.html  polling_unit_form.html
scripts/: analyze_election_data.py  build_lga_modeling_dataset.py  election_ml_pipeline.py  render_ml_submission_notebook.py
static/css/: app.css
